// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for Backdrop component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Backdrop"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="Backdrop"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for ListPokemonRow component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <tr
        class="MuiTableRow-root MuiTableRow-hover css-10cbwbc-MuiTableRow-root"
        data-cy="TestPokemonGrassPoison"
      >
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
        >
          <img
            alt="TestPokemonGrassPoison"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png"
            title="TestPokemonGrassPoison"
          />
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
          data-cy="pokemon-name"
        >
          <p
            style="width: 100px;"
          >
            TestPokemonGrassPoison
          </p>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
          data-cy="type-container"
        >
          <img
            alt="grass"
            data-cy="grass"
            height="30"
            src="grass.png"
            style="margin-right: 10px;"
            title="grass"
          />
          <img
            alt="posion"
            data-cy="posion"
            height="30"
            style="margin-right: 10px;"
            title="posion"
          />
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_0"
        >
          2
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_1"
        >
          3
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_2"
        >
          4
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_3"
        >
          5
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_4"
        >
          6
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_5"
        >
          7
        </td>
      </tr>
    </div>
  </body>,
  "container": <div>
    <tr
      class="MuiTableRow-root MuiTableRow-hover css-10cbwbc-MuiTableRow-root"
      data-cy="TestPokemonGrassPoison"
    >
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
      >
        <img
          alt="TestPokemonGrassPoison"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/1.png"
          title="TestPokemonGrassPoison"
        />
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
        data-cy="pokemon-name"
      >
        <p
          style="width: 100px;"
        >
          TestPokemonGrassPoison
        </p>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
        data-cy="type-container"
      >
        <img
          alt="grass"
          data-cy="grass"
          height="30"
          src="grass.png"
          style="margin-right: 10px;"
          title="grass"
        />
        <img
          alt="posion"
          data-cy="posion"
          height="30"
          style="margin-right: 10px;"
          title="posion"
        />
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_0"
      >
        2
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_1"
      >
        3
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_2"
      >
        4
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_3"
      >
        5
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_4"
      >
        6
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_5"
      >
        7
      </td>
    </tr>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for PokemonInTeam component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters makeStyles-acc-2 css-1elwnq4-MuiPaper-root-MuiAccordion-root"
        data-testid="pokemon_accordion"
      >
        <div
          aria-expanded="false"
          class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
          role="button"
          tabindex="0"
        >
          <div
            class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-typ-3 css-ahj2mt-MuiTypography-root"
            >
              <img
                alt="Charizard"
                class="makeStyles-pokeImage-6"
                src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png"
                title="Charizard"
              />
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-pokeName-4 css-ahj2mt-MuiTypography-root"
            >
              Charizard
            </p>
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-typ-3 css-ahj2mt-MuiTypography-root"
            >
              <img
                alt="PokeTypes"
                class="makeStyles-pokeType-5"
                height="30"
                src="fire.png"
                style="margin-right: 10px;"
              />
              <img
                alt="PokeTypes"
                class="makeStyles-pokeType-5"
                height="30"
                src="flying.png"
                style="margin-right: 10px;"
              />
            </p>
          </div>
          <div
            class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ExpandMoreIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </div>
        </div>
        <div
          class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
          style="min-height: 0px;"
        >
          <div
            class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
          >
            <div
              class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
            >
              <div
                class="MuiAccordion-region"
                role="region"
              >
                <div
                  class="MuiAccordionDetails-root makeStyles-accDet-1 css-15v22id-MuiAccordionDetails-root"
                >
                  <button
                    class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root makeStyles-removeButton-7 css-sghohy-MuiButtonBase-root-MuiButton-root"
                    data-testid="remove-button"
                    tabindex="0"
                    type="button"
                  >
                    Remove from team
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters makeStyles-acc-2 css-1elwnq4-MuiPaper-root-MuiAccordion-root"
      data-testid="pokemon_accordion"
    >
      <div
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 makeStyles-typ-3 css-ahj2mt-MuiTypography-root"
          >
            <img
              alt="Charizard"
              class="makeStyles-pokeImage-6"
              src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png"
              title="Charizard"
            />
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 makeStyles-pokeName-4 css-ahj2mt-MuiTypography-root"
          >
            Charizard
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 makeStyles-typ-3 css-ahj2mt-MuiTypography-root"
          >
            <img
              alt="PokeTypes"
              class="makeStyles-pokeType-5"
              height="30"
              src="fire.png"
              style="margin-right: 10px;"
            />
            <img
              alt="PokeTypes"
              class="makeStyles-pokeType-5"
              height="30"
              src="flying.png"
              style="margin-right: 10px;"
            />
          </p>
        </div>
        <div
          class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ExpandMoreIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
          >
            <div
              class="MuiAccordion-region"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root makeStyles-accDet-1 css-15v22id-MuiAccordionDetails-root"
              >
                <button
                  class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root makeStyles-removeButton-7 css-sghohy-MuiButtonBase-root-MuiButton-root"
                  data-testid="remove-button"
                  tabindex="0"
                  type="button"
                >
                  Remove from team
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for PopUp component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="popupInner"
        id="inner"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="popupInner"
      id="inner"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for SortButton component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="sortingButton"
        data-cy="HP"
        data-testid="HP"
      >
        <p />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="FilterAltIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="sortingButton"
      data-cy="HP"
      data-testid="HP"
    >
      <p />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="FilterAltIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for SortList component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <tr
        class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="pokemonId"
            data-testid="pokemonId"
          >
            <p>
              PokemonId
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
        />
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
        />
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="hp"
            data-testid="hp"
          >
            <p>
              Hp
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="attack"
            data-testid="attack"
          >
            <p>
              Attack
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="defense"
            data-testid="defense"
          >
            <p>
              Defense
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="special_attack"
            data-testid="special_attack"
          >
            <p>
              Sp. Atk
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="special_defense"
            data-testid="special_defense"
          >
            <p>
              Sp. Def
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="speed"
            data-testid="speed"
          >
            <p>
              Speed
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="total"
            data-testid="total"
          >
            <p>
              Total
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </div>
  </body>,
  "container": <div>
    <tr
      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
    >
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="pokemonId"
          data-testid="pokemonId"
        >
          <p>
            PokemonId
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      />
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      />
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="hp"
          data-testid="hp"
        >
          <p>
            Hp
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="attack"
          data-testid="attack"
        >
          <p>
            Attack
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="defense"
          data-testid="defense"
        >
          <p>
            Defense
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="special_attack"
          data-testid="special_attack"
        >
          <p>
            Sp. Atk
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="special_defense"
          data-testid="special_defense"
        >
          <p>
            Sp. Def
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="speed"
          data-testid="speed"
        >
          <p>
            Speed
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="total"
          data-testid="total"
        >
          <p>
            Total
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
    </tr>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for displayTeams component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for myTeam component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="myTeamPage"
        >
          <h2
            class="myTeamHeadline"
          >
            Current Team
          </h2>
          <div
            class="MyTeamOverview"
          >
            <div>
              <div
                class="emptyTeam"
              >
                You have not chosen any pokemon for your team. Please go to Database and select some you like.
              </div>
              <div
                class="message"
              >
                Maybe you can get some inspiration from the teams below
              </div>
            </div>
          </div>
          <h2
            class="teamsHeadline"
          >
            Teams
          </h2>
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="myTeamPage"
      >
        <h2
          class="myTeamHeadline"
        >
          Current Team
        </h2>
        <div
          class="MyTeamOverview"
        >
          <div>
            <div
              class="emptyTeam"
            >
              You have not chosen any pokemon for your team. Please go to Database and select some you like.
            </div>
            <div
              class="message"
            >
              Maybe you can get some inspiration from the teams below
            </div>
          </div>
        </div>
        <h2
          class="teamsHeadline"
        >
          Teams
        </h2>
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for myTeamOverview component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MyTeamOverview"
      >
        <div>
          <div
            class="emptyTeam"
          >
            You have not chosen any pokemon for your team. Please go to Database and select some you like.
          </div>
          <div
            class="message"
          >
            Maybe you can get some inspiration from the teams below
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MyTeamOverview"
    >
      <div>
        <div
          class="emptyTeam"
        >
          You have not chosen any pokemon for your team. Please go to Database and select some you like.
        </div>
        <div
          class="message"
        >
          Maybe you can get some inspiration from the teams below
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for popUp component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="popupInner"
        id="inner"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="popupInner"
      id="inner"
    >
      <span
        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
        role="progressbar"
        style="width: 40px; height: 40px;"
      >
        <svg
          class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for sortingButton component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="sortingButton"
        data-cy="hp"
        data-testid="hp"
      >
        <p>
          Hp
        </p>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="FilterAltIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="sortingButton"
      data-cy="hp"
      data-testid="hp"
    >
      <p>
        Hp
      </p>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="FilterAltIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for sortingButtonList component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <tr
        class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="pokemonId"
            data-testid="pokemonId"
          >
            <p>
              PokemonId
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowDownwardOutlinedIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
        />
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
        />
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="hp"
            data-testid="hp"
          >
            <p>
              Hp
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="attack"
            data-testid="attack"
          >
            <p>
              Attack
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="defense"
            data-testid="defense"
          >
            <p>
              Defense
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="special_attack"
            data-testid="special_attack"
          >
            <p>
              Sp. Atk
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="special_defense"
            data-testid="special_defense"
          >
            <p>
              Sp. Def
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="speed"
            data-testid="speed"
          >
            <p>
              Speed
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
        >
          <button
            class="sortingButton"
            data-cy="total"
            data-testid="total"
          >
            <p>
              Total
            </p>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="FilterAltIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </div>
  </body>,
  "container": <div>
    <tr
      class="MuiTableRow-root css-1q1u3t4-MuiTableRow-root"
    >
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="pokemonId"
          data-testid="pokemonId"
        >
          <p>
            PokemonId
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowDownwardOutlinedIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      />
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium css-bsph2u-MuiTableCell-root"
      />
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="hp"
          data-testid="hp"
        >
          <p>
            Hp
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="attack"
          data-testid="attack"
        >
          <p>
            Attack
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="defense"
          data-testid="defense"
        >
          <p>
            Defense
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="special_attack"
          data-testid="special_attack"
        >
          <p>
            Sp. Atk
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="special_defense"
          data-testid="special_defense"
        >
          <p>
            Sp. Def
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="speed"
          data-testid="speed"
        >
          <p>
            Speed
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-sizeMedium statList css-bsph2u-MuiTableCell-root"
      >
        <button
          class="sortingButton"
          data-cy="total"
          data-testid="total"
        >
          <p>
            Total
          </p>
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FilterAltIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.25 5.61C6.27 8.2 10 13 10 13v6c0 .55.45 1 1 1h2c.55 0 1-.45 1-1v-6s3.72-4.8 5.74-7.39c.51-.66.04-1.61-.79-1.61H5.04c-.83 0-1.3.95-.79 1.61z"
            />
          </svg>
        </button>
      </td>
    </tr>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for statTable component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <h3>
          Stats
        </h3>
        <div
          style="display: flex; flex-direction: column;"
        >
          <div
            class="statEntry"
          >
            <span
              class="statName"
            >
              hp
            </span>
            <span
              class="statValue"
            >
              30
            </span>
            <div
              class="statBar"
              style="width: calc(60px / 100 * 30); background: rgb(255, 77, 77);"
            />
          </div>
          <div
            class="statEntry"
          >
            <span
              class="statName"
            >
              attack
            </span>
            <span
              class="statValue"
            >
              40
            </span>
            <div
              class="statBar"
              style="width: calc(60px / 100 * 40); background: rgb(255, 77, 77);"
            />
          </div>
          <div
            class="statEntry"
          >
            <span
              class="statName"
            >
              defense
            </span>
            <span
              class="statValue"
            >
              50
            </span>
            <div
              class="statBar"
              style="width: calc(60px / 100 * 50); background: rgb(255, 77, 77);"
            />
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <h3>
        Stats
      </h3>
      <div
        style="display: flex; flex-direction: column;"
      >
        <div
          class="statEntry"
        >
          <span
            class="statName"
          >
            hp
          </span>
          <span
            class="statValue"
          >
            30
          </span>
          <div
            class="statBar"
            style="width: calc(60px / 100 * 30); background: rgb(255, 77, 77);"
          />
        </div>
        <div
          class="statEntry"
        >
          <span
            class="statName"
          >
            attack
          </span>
          <span
            class="statValue"
          >
            40
          </span>
          <div
            class="statBar"
            style="width: calc(60px / 100 * 40); background: rgb(255, 77, 77);"
          />
        </div>
        <div
          class="statEntry"
        >
          <span
            class="statName"
          >
            defense
          </span>
          <span
            class="statValue"
          >
            50
          </span>
          <div
            class="statBar"
            style="width: calc(60px / 100 * 50); background: rgb(255, 77, 77);"
          />
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for tableListRow component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <tr
        class="MuiTableRow-root MuiTableRow-hover css-10cbwbc-MuiTableRow-root"
        data-cy="Charizard"
      >
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
        >
          <img
            alt="Charizard"
            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png"
            title="Charizard"
          />
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
          data-cy="pokemon-name"
        >
          <p
            style="width: 100px;"
          >
            Charizard
          </p>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
          data-cy="type-container"
        >
          <img
            alt="fire"
            data-cy="fire"
            height="30"
            src="fire.png"
            style="margin-right: 10px;"
            title="fire"
          />
          <img
            alt="flying"
            data-cy="flying"
            height="30"
            src="flying.png"
            style="margin-right: 10px;"
            title="flying"
          />
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_0"
        >
          84
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_1"
        >
          78
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_2"
        >
          109
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_3"
        >
          85
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_4"
        >
          100
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
          data-cy="stat_5"
        >
          534
        </td>
      </tr>
    </div>
  </body>,
  "container": <div>
    <tr
      class="MuiTableRow-root MuiTableRow-hover css-10cbwbc-MuiTableRow-root"
      data-cy="Charizard"
    >
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
      >
        <img
          alt="Charizard"
          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png"
          title="Charizard"
        />
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
        data-cy="pokemon-name"
      >
        <p
          style="width: 100px;"
        >
          Charizard
        </p>
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium css-bu8mf4-MuiTableCell-root"
        data-cy="type-container"
      >
        <img
          alt="fire"
          data-cy="fire"
          height="30"
          src="fire.png"
          style="margin-right: 10px;"
          title="fire"
        />
        <img
          alt="flying"
          data-cy="flying"
          height="30"
          src="flying.png"
          style="margin-right: 10px;"
          title="flying"
        />
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_0"
      >
        84
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_1"
      >
        78
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_2"
      >
        109
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_3"
      >
        85
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_4"
      >
        100
      </td>
      <td
        class="MuiTableCell-root MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium statList css-bu8mf4-MuiTableCell-root"
        data-cy="stat_5"
      >
        534
      </td>
    </tr>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Snapshot test for teamInDisplayTeams component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-cy="team-TestTeam"
      >
        <h3
          style="text-align: center;"
        >
           
          TestTeam
           
        </h3>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 makeStyles-teamContainer-8 css-mhc70k-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 makeStyles-gridContainer-13 css-1bve14t-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-pokeCard-10 css-bhp9pd-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardContent-root css-la9dhx-MuiCardContent-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <img
                    alt="Charizard"
                    height="70"
                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 makeStyles-pokeName-9 css-ahj2mt-MuiTypography-root"
                >
                  Charizard
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <img
                    alt="PokeTypes"
                    height="30"
                    src="fire.png"
                    title="fire"
                  />
                  <img
                    alt="PokeTypes"
                    height="30"
                    src="flying.png"
                    title="flying"
                  />
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 makeStyles-gridContainer-13 css-1bve14t-MuiGrid-root"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-pokeCard-10 css-bhp9pd-MuiPaper-root-MuiCard-root"
            >
              <div
                class="MuiCardContent-root css-la9dhx-MuiCardContent-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <img
                    alt="Blastoise"
                    height="70"
                    src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/9.png"
                  />
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 makeStyles-pokeName-9 css-ahj2mt-MuiTypography-root"
                >
                  Blastoise
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
                >
                  <img
                    alt="PokeTypes"
                    height="30"
                    src="water.png"
                    title="water"
                  />
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-cy="team-TestTeam"
    >
      <h3
        style="text-align: center;"
      >
         
        TestTeam
         
      </h3>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 makeStyles-teamContainer-8 css-mhc70k-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 makeStyles-gridContainer-13 css-1bve14t-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-pokeCard-10 css-bhp9pd-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-la9dhx-MuiCardContent-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <img
                  alt="Charizard"
                  height="70"
                  src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/6.png"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 makeStyles-pokeName-9 css-ahj2mt-MuiTypography-root"
              >
                Charizard
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <img
                  alt="PokeTypes"
                  height="30"
                  src="fire.png"
                  title="fire"
                />
                <img
                  alt="PokeTypes"
                  height="30"
                  src="flying.png"
                  title="flying"
                />
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 makeStyles-gridContainer-13 css-1bve14t-MuiGrid-root"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-pokeCard-10 css-bhp9pd-MuiPaper-root-MuiCard-root"
          >
            <div
              class="MuiCardContent-root css-la9dhx-MuiCardContent-root"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <img
                  alt="Blastoise"
                  height="70"
                  src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/home/9.png"
                />
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 makeStyles-pokeName-9 css-ahj2mt-MuiTypography-root"
              >
                Blastoise
              </p>
              <p
                class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
              >
                <img
                  alt="PokeTypes"
                  height="30"
                  src="water.png"
                  title="water"
                />
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
